objects/UNITY_Date_Time_Field_to_Local__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of fields to be converted to the user&apos;s local time zone when changed</description>
    <fields>
        <fullName>UNITY_Is_to_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the target value will get the value for the user&apos;s time zone</description>
        <label>Is to Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Object__c</fullName>
        <description>The object api name to which the mapping applies to</description>
        <label>Object (api)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Origin_Field__c</fullName>
        <description>The field to track for changes and use its value to be updated with the account local time</description>
        <label>Origin Field (api)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Target_Field__c</fullName>
        <description>The target field to get updated</description>
        <label>Target Field (api)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_To_Date_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the target field is a date time field</description>
        <label>To Date/Time?</label>
        <type>Checkbox</type>
    </fields>
    <label>UNITY Date Time Field to Local</label>
</CustomObject>